# kairos

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
Data/: bars.parquet
analysis/: kalman.py  main.py  stat_arb.py
kairos/: pyproject.toml
service/: dependencies.py  exceptions.py  main.py
service/routers/: chat.py  pairs.py
service/schemas/: chat.py
service/services/: chat_service.py  pairs_service.py
service/tests/: test_client.py  test_pairs_service.py
src/: data_extract.py  historical_testing.py  kalman.py  logging_config.py  main.py  stat_arb.py  stationarity.py
