[project]
name = "kairos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.43.5",
    "fastapi>=0.139.0",
    "fastparquet>=2026.5.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "logging>=0.4.9.6",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pykalman>=0.11.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.20",
    "statsmodels>=0.14.6",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
